feat: initial image creation (#1)
Co-authored-by: batinica <batinicaz@users.noreply.github.com>